--- a/JDC/Views/Home/Index.cshtml
+++ b/JDC/Views/Home/Index.cshtml
@@ -11,7 +11,7 @@
             <h1 class="display-5 fw-bold lh-1 mb-3">Добро пожаловать в <span class="text-primary">JDC</span>.</h1>
             <p class="lead">JDC - это единая платформа электронных сервисов для образования. JDC помогает учащимся улучшать показатели в учебе. Родителям - быть в курсе того, как обстоят дела у ребенка с учёбой, а учителям и администрации - сократить бумажную работу и упростить образовательный процесс.</p>
             <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-                <a class="btn btn-primary btn-lg px-4 mr-3" asp-area="Account" asp-controller="Auth" asp-action="Register">Зарегестрировать</a>
+                <a class="btn btn-primary btn-lg px-4 mr-3" asp-area="Account" asp-controller="Auth" asp-action="Register">Зарегистрировать</a>
                 <a class="btn btn-primary-soft btn-lg px-4" asp-action="Documentation">Документация</a>
             </div>
         </div>
