Fixed group crud functionality

--- a/JDC/Areas/Account/Views/_ViewImports.cshtml
+++ b/JDC/Areas/Account/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
-﻿@using JDC.Areas.Account.Models
+﻿@using JDC.Common.Enums
+@using JDC.Common.Extensions
+@using JDC.Areas.Account.Models
 @using JDC.BusinessLogic.Models.Requests
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
