--- a/JDC/Areas/Account/Views/Auth/Register.cshtml
+++ b/JDC/Areas/Account/Views/Auth/Register.cshtml
@@ -1,6 +1,17 @@
 ﻿@model RegistrationModel
+
 @{
     ViewData["Title"] = "Регистрация";
+    var types = new List<SelectListItem>();
+
+    foreach (InstituteType type in Enum.GetValues(typeof(InstituteType)))
+    {
+        types.Add(new SelectListItem
+        {
+            Value = ((int)type).ToString(),
+            Text = type.GetDescription(),
+        });
+    }
 }
 
 <h1>@ViewData["Title"]</h1>
@@ -25,6 +36,13 @@
             <div class="form-group">
                 <label class="other-info" asp-for="@Model.Email"></label>
                 <input asp-for="@Model.Email" class="form-control" />
+            </div>
+
+            <div class="form-group">
+                <label class="other-info" asp-for="@Model.InstitutionType"></label>
+                <select class="form-control" asp-for="@Model.InstitutionType" asp-items="@types">
+                    <option value="" disabled selected >Выберите тип учреждения</option>
+                </select>
             </div>
 
             <div class="form-group">
