--- a/JDC/Views/Teachers/Index.cshtml
+++ b/JDC/Views/Teachers/Index.cshtml
@@ -1,15 +1,10 @@
-﻿@model List<Group>
+﻿@model List<Teacher>
 
 @{
-    ViewData["Title"] = "Список групп";
-
-    Func<Group, string> nameHandler = (Group group) =>
-    {
-        return group?.Teacher?.User?.ShortName ?? "Нет преподавателя";
-    };
+    ViewData["Title"] = "Index";
 }
 
-<h1>Список групп (@Model.Count)</h1>
+<h1>Список учителей (@Model.Count)</h1>
 
 <a class="btn-floating btn-lg add-btn waves-effect" asp-action="Create">
     <i class="fa fa-plus" aria-hidden="true"></i>
@@ -18,7 +13,7 @@
 @if (Model.Count == 0)
 {
     <div class="alert alert-warning" role="alert">
-         Упс, список групп пуст.
+         Упс, список учителей пуст.
     </div>
 }
 else
@@ -29,32 +24,26 @@ else
                 <tr>
                     <th>№</th>
                     <th>
-                        @Html.DisplayNameFor(model => Model[0].Name)
+                        @Html.DisplayNameFor(model => Model[0].User.LongName)
                     </th>
                     <th>
-                        @Html.DisplayNameFor(model => Model[0].Teacher)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => Model[0].Students)
+                        @Html.DisplayNameFor(model => Model[0].Group.Name)
                     </th>
                     <th>Actions</th>
                 </tr>
             </thead>
             <tbody>
-                @for (int i = 0; i < Model.Count; i++)
+                @for (int i = 0; i < Model.Count(); i++)
                 {
                     <tr>
                         <td>
                             @(i + 1)
                         </td>
                         <td>
-                            @Model[i].Name
+                            @Model[i].User.LongName
                         </td>
                         <td>
-                            <div>@(nameHandler(Model[i]))</div>
-                        </td>
-                        <td>
-                            @Model[i].Students.Count
+                            @(Model[i].Group is null ? "Нет группы" : Model[i].Group.Name)
                         </td>
 
                         <td>
