--- a/JDC/Views/_ViewImports.cshtml
+++ b/JDC/Views/_ViewImports.cshtml
@@ -3,4 +3,5 @@
 @using JDC.Common.Enums
 @using JDC.Common.Entities
 @using JDC.Common.Extensions
+@using System.Linq
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
